syntax="proto3";

package org.jgroups.upgrade_server;


option java_multiple_files = true;


service UpgradeService {
    rpc Connect (stream Request) returns (stream Response);
    rpc Leave (LeaveRequest)     returns (Void);
    rpc Dump (Void)              returns (DumpResponse);
}

message Message {
    string    cluster_name = 1;
    Address   destination  = 2; // null: send to all
    Address   sender       = 3;
    oneof one_of {
        bytes payload          = 4;
        MethodCall method_call = 5;
    }
    RpcHeader rpc_header   = 6; // if the message is an RPC, otherwise this field will be null
    Metadata  meta_data    = 7; // metadata (may be null)
}

message JoinRequest {
    string  cluster_name = 1;
    Address address      = 2;
}

/** Used for graceful leaves. Ungraceful leaves (e.g. crashes) are detected by the UpgradeService directly  */
message LeaveRequest {
    string      cluster_name = 1;
    Address     leaver       = 2;
}

message Address {
    string name = 1;
    UUID   uuid = 2;
}

message ViewId {
    int64 id        = 1;
    Address creator = 2;
}

message View {
    ViewId           view_id = 1;
    repeated Address member  = 2;
}

message UUID {
    int64 most_sig   = 1; // most significant bits
    int64 least_sig  = 2; // least significant bits
}


message Request {
    oneof one_of {
        Message      message   = 1;
        JoinRequest  join_req  = 2;
        LeaveRequest leave_req = 3;
    }
}

message Response {
    oneof one_of {
        Message     message  = 1;
        View        view     = 2;
    }
}


message Void {
    // contains nothing
}

message DumpResponse {
    string dump = 1;
}

/** Header used for RPCs (RpcDispatcher / MessageDispatcher) */
message RpcHeader {
    int32 type       = 1; // request, response, exception
    int64 request_id = 2;
    int32 corr_id    = 3;
    repeated Address exclusion_list = 4;
}

message Metadata {
    int32 msg_type = 1;
    int32 version = 2; // jgroups version
}

message MethodCall {
    int32 mode          = 1;
    bytes payload       = 2;
}
